--- a/index.html
+++ b/index.html
@@ -92,14 +92,18 @@
                 </div>
                 
                 <div class="second-container">
-                    <div class="copy-link-cont">
-                        <i class="fa-solid fa-link"></i>
-                        <p>Copy link</p>
-                    </div>
-                    <div class="copy-link-cont">
-                        <i class="fa-solid fa-circle-question"></i>
-                        <p>Learn more about sharing</p>
-                    </div>
+                    <a href="#">
+                        <div class="copy-link-cont">
+                            <i class="fa-solid fa-link"></i>
+                            <p>Copy link</p>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="copy-link-cont">
+                            <i class="fa-solid fa-circle-question"></i>
+                            <p>Learn more about sharing</p>
+                        </div>
+                    </a>
                 </div>
             </div>
             <div class="btns-container">
